--- a/pasians-gui/images.qrc
+++ b/pasians-gui/images.qrc
@@ -55,5 +55,6 @@
         <file>res/queen_of_hearts.png</file>
         <file>res/queen_of_spades.png</file>
         <file>res/red_joker.png</file>
+        <file>res/none.png</file>
     </qresource>
 </RCC>
