--- a/pasians-gui/pasians.ui
+++ b/pasians-gui/pasians.ui
@@ -68,15 +68,170 @@
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>Game</string>
+     <string>Pasians</string>
     </property>
+    <addaction name="actionNew"/>
+    <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
+   <widget class="QMenu" name="menuGame_1">
+    <property name="title">
+     <string>Game 1</string>
+    </property>
+    <addaction name="actionSave"/>
+    <addaction name="actionLoad"/>
+    <addaction name="actionUndo"/>
+    <addaction name="actionHint"/>
+    <addaction name="separator"/>
+    <addaction name="actionQuit"/>
+   </widget>
+   <widget class="QMenu" name="menuGame_2">
+    <property name="title">
+     <string>Game 2</string>
+    </property>
+    <addaction name="actionSave_2"/>
+    <addaction name="actionLoad_2"/>
+    <addaction name="actionUndo_2"/>
+    <addaction name="actionHint_2"/>
+    <addaction name="separator"/>
+    <addaction name="actionQuit_2"/>
+   </widget>
+   <widget class="QMenu" name="menuGame_3">
+    <property name="title">
+     <string>Game 3</string>
+    </property>
+    <addaction name="actionSave_3"/>
+    <addaction name="actionLoad_3"/>
+    <addaction name="actionUndo_3"/>
+    <addaction name="actionHint_3"/>
+    <addaction name="separator"/>
+    <addaction name="actionQuit_3"/>
+   </widget>
+   <widget class="QMenu" name="menuGame_4">
+    <property name="title">
+     <string>Game 4</string>
+    </property>
+    <addaction name="actionSave_4"/>
+    <addaction name="actionLoad_4"/>
+    <addaction name="actionUndo_4"/>
+    <addaction name="actionHint_4"/>
+    <addaction name="separator"/>
+    <addaction name="actionQuit_4"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuGame_1"/>
+   <addaction name="menuGame_2"/>
+   <addaction name="menuGame_3"/>
+   <addaction name="menuGame_4"/>
   </widget>
   <action name="actionExit">
    <property name="text">
     <string>Exit</string>
+   </property>
+  </action>
+  <action name="actionSave">
+   <property name="text">
+    <string>Save</string>
+   </property>
+  </action>
+  <action name="actionLoad">
+   <property name="text">
+    <string>Load</string>
+   </property>
+  </action>
+  <action name="actionUndo">
+   <property name="text">
+    <string>Undo</string>
+   </property>
+  </action>
+  <action name="actionHint">
+   <property name="text">
+    <string>Hint</string>
+   </property>
+  </action>
+  <action name="actionSave_2">
+   <property name="text">
+    <string>Save</string>
+   </property>
+  </action>
+  <action name="actionLoad_2">
+   <property name="text">
+    <string>Load</string>
+   </property>
+  </action>
+  <action name="actionUndo_2">
+   <property name="text">
+    <string>Undo</string>
+   </property>
+  </action>
+  <action name="actionHint_2">
+   <property name="text">
+    <string>Hint</string>
+   </property>
+  </action>
+  <action name="actionSave_3">
+   <property name="text">
+    <string>Save</string>
+   </property>
+  </action>
+  <action name="actionLoad_3">
+   <property name="text">
+    <string>Load</string>
+   </property>
+  </action>
+  <action name="actionUndo_3">
+   <property name="text">
+    <string>Undo</string>
+   </property>
+  </action>
+  <action name="actionHint_3">
+   <property name="text">
+    <string>Hint</string>
+   </property>
+  </action>
+  <action name="actionSave_4">
+   <property name="text">
+    <string>Save</string>
+   </property>
+  </action>
+  <action name="actionLoad_4">
+   <property name="text">
+    <string>Load</string>
+   </property>
+  </action>
+  <action name="actionUndo_4">
+   <property name="text">
+    <string>Undo</string>
+   </property>
+  </action>
+  <action name="actionHint_4">
+   <property name="text">
+    <string>Hint</string>
+   </property>
+  </action>
+  <action name="actionNew">
+   <property name="text">
+    <string>New</string>
+   </property>
+  </action>
+  <action name="actionQuit">
+   <property name="text">
+    <string>Quit</string>
+   </property>
+  </action>
+  <action name="actionQuit_2">
+   <property name="text">
+    <string>Quit</string>
+   </property>
+  </action>
+  <action name="actionQuit_3">
+   <property name="text">
+    <string>Quit</string>
+   </property>
+  </action>
+  <action name="actionQuit_4">
+   <property name="text">
+    <string>Quit</string>
    </property>
   </action>
  </widget>
