--- a/pasians-gui/pasians.ui
+++ b/pasians-gui/pasians.ui
@@ -216,7 +216,7 @@
   </action>
   <action name="actionQuit">
    <property name="text">
-    <string>Quit</string>
+    <string>Reset</string>
    </property>
   </action>
   <action name="actionQuit_2">
